[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["<package name>"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
